[block-separator] Hide separator overflow (all layers) in backend fixes #264 (#348)

--- a/src/block/separator/editor.scss
+++ b/src/block/separator/editor.scss
@@ -14,6 +14,9 @@
 }
 [data-type="ugb/separator"][data-align="full"] {
 	.ugb-separator {
+		.ugb-separator__svg-inner {
+			overflow: hidden;
+		}
 		.ugb-separator__svg-wrapper {
 			overflow: visible;
 		}
